@@ -18,7 +18,6 @@ package org.astraea.connector.perf;
 
 import java.time.Duration;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.astraea.common.Configuration;
 import org.astraea.common.Utils;
@@ -28,11 +27,14 @@ import org.astraea.connector.SinkConnector;
 import org.astraea.connector.SinkTask;
 
 public class PerfSink extends SinkConnector {
+
+  static Duration FREQUENCY_DEFAULT = Duration.ofMillis(300);
+
   static Definition FREQUENCY_DEF =
       Definition.builder()
           .name("frequency")
           .type(Definition.Type.STRING)
-          .defaultValue("300ms")
+          .defaultValue(FREQUENCY_DEFAULT.toMillis() + "ms")
           .validator((name, value) -> Utils.toDuration(value.toString()))
           .build();
 
@@ -50,7 +52,7 @@ public class PerfSink extends SinkConnector {
 
   @Override
   protected List<Configuration> takeConfiguration(int maxTasks) {
-    return IntStream.range(0, maxTasks).mapToObj(i -> config).collect(Collectors.toList());
+    return IntStream.range(0, maxTasks).mapToObj(i -> config).toList();
   }
 
   @Override
@@ -60,7 +62,7 @@ public class PerfSink extends SinkConnector {
 
   public static class Task extends SinkTask {
 
-    private Duration frequency = Utils.toDuration(FREQUENCY_DEF.defaultValue().toString());
+    private Duration frequency = FREQUENCY_DEFAULT;
 
     private volatile long lastPut = System.currentTimeMillis();
 
